--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,12 @@
+
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
 motor==3.6.0
-pymongo==4.10.1
+pymongo==4.9.1
 python-dotenv==1.0.1
 pydantic==2.9.2
 pydantic-settings==2.5.2
+email-validator==2.2.0
 langchain==0.3.1
 langchain-community==0.3.1
 langchain-groq==0.2.0
