--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,7 @@ langchain-community==0.3.1
 langchain-groq==0.2.0
 groq==0.11.0
 sentence-transformers==3.1.1
-faiss-cpu==1.8.0.post1
+faiss-cpu>=1.9.0
 beautifulsoup4==4.12.3
 requests==2.32.3
 lxml==5.3.0
