--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,3 @@
-
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
 motor==3.6.0
@@ -18,3 +17,5 @@ requests==2.32.3
 lxml==5.3.0
 python-multipart==0.0.12
 httpx==0.27.2
+certifi>=2024.8.30
+gunicorn==21.2.0
