--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,5 +9,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8080
 
-# Shell form for env expansion
-CMD uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}
+CMD sh -c "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
